// Copyright 2022 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.api.v2alpha.event_templates.testing;

import "google/protobuf/timestamp.proto";
import "wfa/measurement/api/v2alpha/event_templates/testing/banner_ad.proto";
import "wfa/measurement/api/v2alpha/event_templates/testing/person.proto";
import "wfa/measurement/api/v2alpha/event_templates/testing/video.proto";

option java_package = "org.wfanet.measurement.api.v2alpha.event_templates.testing";
option java_multiple_files = true;

message TestEvent {
  google.protobuf.Timestamp time = 1;

  Person person = 2;
  Video video_ad = 3;
  Banner banner_ad = 4;
}
