// Copyright 2024 The Cross-Media Measurement Authors
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//      http://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

package wfa.measurement.reporting.v2alpha;

import "google/api/field_behavior.proto";
import "google/api/resource.proto";
import "wfa/measurement/reporting/v2alpha/impression_qualification_filter_spec.proto";

option java_package = "org.wfanet.measurement.reporting.v2alpha";
option java_multiple_files = true;
option java_outer_classname = "ImpressionQualificationFilterProto";

// Resource representing an Impression Qualification Filter
message ImpressionQualificationFilter {
  option (google.api.resource) = {
    type: "reporting.halo-cmm.org/ImpressionQualificationFilter"
    pattern: "impressionQualificationFilters/{impression_qualification_filter}"
    singular: "impressionQualificationFilter"
    plural: "impressionQualificationFilters"
  };

  // Resource name.
  string name = 1 [(google.api.field_behavior) = IDENTIFIER];

  // Specifies the filter criteria
  ImpressionQualificationFilterSpec filter_spec = 2 [
    (google.api.field_behavior) = REQUIRED,
    (google.api.field_behavior) = IMMUTABLE
  ];

  // The filter category (e.g. MRC)
  //
  // This allows filters to be grouped by category across Filter Types
  string category = 3 [
    (google.api.field_behavior) = OPTIONAL,
    (google.api.field_behavior) = IMMUTABLE
  ];
}
